--- a/concert_ticket/index.html
+++ b/concert_ticket/index.html
@@ -181,7 +181,7 @@
     
 
 
-            <!-- End: Contact section -->
+            <!-- End: Contact section/map -->
 
             <div class="map-section">
                 <img src="./assets/img/map.jpg" alt="Map">
